--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -1670,8 +1670,6 @@ input.sheet-skill-select {
     text-transform: capitalize; }
   .sheet-npc h3 {
     font-size: 0.85em; }
-  .sheet-npc input[type='number'] {
-    width: 3em; }
   .sheet-npc input[type='radio'] {
     opacity: 1; }
   .sheet-npc textarea, .sheet-npc select, .sheet-npc .sheet-matrix input {
@@ -1721,7 +1719,8 @@ input.sheet-skill-select {
     padding: 1%;
     width: 100%; }
     .sheet-npc .sheet-attribute input[type='number'] {
-      text-align: center; }
+      text-align: center;
+      width: 100%; }
     .sheet-npc .sheet-attribute label {
       text-align: center; }
       .sheet-npc .sheet-attribute label[data-i18n-title='modifier'] input[type='number'] {
@@ -1748,7 +1747,8 @@ input.sheet-skill-select {
   .sheet-npc .sheet-body {
     grid-template-columns: 52% 30% 1fr;
     width: 100%;
-    /*:+:+:+: TEXT AREAS :+:+:+:*/ }
+    /*:+:+:+: TEXT AREAS :+:+:+:*/
+    /*:+:+:+: SKILLS :+:+:+:*/ }
     .sheet-npc .sheet-body .sheet-column {
       width: 100%; }
     .sheet-npc .sheet-body .sheet-rows {
@@ -1764,6 +1764,8 @@ input.sheet-skill-select {
         font-weight: normal; }
       .sheet-npc .sheet-body .sheet-rows h3 {
         display: inline; }
+      .sheet-npc .sheet-body .sheet-rows input[type='number'] {
+        width: 3em; }
       .sheet-npc .sheet-body .sheet-rows span.sheet-tiny-span {
         margin: 0px 1%; }
     .sheet-npc .sheet-body span[name='attr_physical_limit']:after,
@@ -1771,14 +1773,63 @@ input.sheet-skill-select {
       content: ','; }
     .sheet-npc .sheet-body .sheet-textrow {
       grid-column: 1 / 4; }
-      .sheet-npc .sheet-body .sheet-textrow h2 {
-        display: inline; }
+      .sheet-npc .sheet-body .sheet-textrow h1 {
+        display: inline;
+        line-height: unset;
+        margin-right: 1%; }
       .sheet-npc .sheet-body .sheet-textrow label {
         width: 100%; }
         .sheet-npc .sheet-body .sheet-textrow label[data-i18n-title='initiate'], .sheet-npc .sheet-body .sheet-textrow label[data-i18n-title='submersion'] {
           width: 4em; }
           .sheet-npc .sheet-body .sheet-textrow label[data-i18n-title='initiate'] input, .sheet-npc .sheet-body .sheet-textrow label[data-i18n-title='submersion'] input {
             width: 100%; }
+    .sheet-npc .sheet-body div.sheet-skills {
+      grid-column: 1 / 4;
+      /*:+:+:+: NPC INLINE REPEAITNG SECTIONS SUCH AS SKILLS :+:+:+:*/ }
+      .sheet-npc .sheet-body div.sheet-skills h1 {
+        display: inline; }
+      .sheet-npc .sheet-body div.sheet-skills h2 {
+        font-variant: small-caps;
+        text-align: center;
+        text-decoration: underline; }
+      .sheet-npc .sheet-body div.sheet-skills input[type='number'] {
+        width: 100%; }
+      .sheet-npc .sheet-body div.sheet-skills input[name='attr_flag'] {
+        position: absolute;
+        opacity: 0;
+        z-index: 2; }
+        .sheet-npc .sheet-body div.sheet-skills input[name='attr_flag'] + span {
+          opacity: 0; }
+        .sheet-npc .sheet-body div.sheet-skills input[name='attr_flag']:checked + span {
+          color: #FCD116;
+          opacity: 1; }
+        .sheet-npc .sheet-body div.sheet-skills input[name='attr_flag']:checked ~ .sheet-settings {
+          display: inline-grid;
+          margin-bottom: 2%; }
+      .sheet-npc .sheet-body div.sheet-skills div.repitem:hover > input[name='attr_flag'] + span {
+        opacity: 1; }
+      .sheet-npc .sheet-body div.sheet-skills div.repitem div.sheet-settings {
+        min-width: 700px;
+        grid-template-columns: 2fr 8em 8em 1fr 1fr;
+        grid-column-gap: 1%; }
+        .sheet-npc .sheet-body div.sheet-skills div.repitem div.sheet-settings h2[data-i18n='specializations'] {
+          grid-column: 1 / 6;
+          text-align: left; }
+        .sheet-npc .sheet-body div.sheet-skills div.repitem div.sheet-settings label[data-i18n-title="specializations"] {
+          grid-column: 1 / 6; }
+          .sheet-npc .sheet-body div.sheet-skills div.repitem div.sheet-settings label[data-i18n-title="specializations"] input[type='text'] {
+            text-align: left;
+            width: 100%; }
+      .sheet-npc .sheet-body div.sheet-skills div.repitem span[name='attr_display_rating']:after {
+        content: ','; }
+      .sheet-npc .sheet-body div.sheet-skills div.repcontainer {
+        display: inline;
+        max-width: 500px; }
+        .sheet-npc .sheet-body div.sheet-skills div.repcontainer .repitem,
+        .sheet-npc .sheet-body div.sheet-skills div.repcontainer .repcontrol {
+          display: inline-block;
+          vertical-align: top;
+          margin-bottom: 0px; }
   .sheet-npc .sheet-repeating h3 {
     font-variant: small-caps;
     text-align: center;
@@ -1797,7 +1848,20 @@ input.sheet-settings-toggle ~ .sheet-attr-lim div.sheet-settings,
 input.sheet-settings-toggle:checked ~ .sheet-attr-lim div.sheet-display,
 input.sheet-settings-toggle[value='settings'] ~ div.sheet-display,
 input.sheet-settings-toggle[value='display'] ~ div.sheet-settings,
-input.sheet-settings-toggle[value='display'] ~ div.sheet-settings-grid, .sheet-hide-magic, .sheet-hide-resonance, .sheet-grunt, .sheet-host, .sheet-sprite {
+input.sheet-settings-toggle[value='display'] ~ div.sheet-settings-grid, .sheet-hide-magic, .sheet-hide-resonance, .sheet-grunt, .sheet-host, .sheet-sprite, input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-column:nth-of-type(1n+2),
+input[name='attr_sheet_type'][value='sprite'] ~ .sheet-npc .sheet-column:nth-of-type(1n+2), input[name='attr_flag_special'][value='mundane'] ~ div.sheet-npc .sheet-hide-magic,
+input[name='attr_flag_special'][value='mundane'] ~ div.sheet-npc .sheet-hide-resonance,
+input[name='attr_flag_special'][value='mundane'] ~ div.sheet-npc .sheet-grunt.sheet-hide-magic,
+input[name='attr_flag_special'][value='mundane'] ~ div.sheet-npc .sheet-grunt.sheet-hide-resonance,
+input[name='attr_flag_special'][value='resonance'] ~ div.sheet-npc .sheet-hide-magic,
+input[name='attr_flag_special'][value='resonance'] ~ div.sheet-npc .sheet-grunt.sheet-hide-magic,
+input[name='attr_flag_special'][value='magic'] ~ div.sheet-npc .sheet-hide-resonance,
+input[name='attr_flag_special'][value='magic'] ~ div.sheet-npc .sheet-grunt.sheet-hide-resonance,
+input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-attribute .sheet-settings.sheet-hide-magic,
+input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-attribute .sheet-settings.sheet-hide-resonance,
+input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-body .sheet-settings.sheet-hide-magic,
+input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-body .sheet-settings.sheet-hide-resonance, input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-body input[type='hidden'][value=''] + div.sheet-textrow, input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-body input[type='hidden'][value=''] + div.sheet-rows.sheet-grunt, input[name='attr_display_specialization'][value=''] ~ button[name*='specialization'],
+input[name='attr_display_specialization'][value=' '] ~ button[name*='specialization'] {
   display: none; }
 
 .sheet-tab-switch[value='active'] ~ .sheet-skills-active,
@@ -1816,7 +1880,8 @@ input.sheet-settings-toggle[value='display'] ~ div.sheet-settings-grid, .sheet-h
 
 .sheet-display-flag:checked ~ .sheet-collapsable .sheet-desc-lifestyle, .sheet-arms .sheet-display, .sheet-npc .sheet-body .sheet-column, input[name='attr_sheet_type']:not([value='pc']) ~ .sheet-npc,
 input[name='attr_sheet_type'][value='pc'] ~ .sheet-pc, .sheet-options_toggle[value='arms'] ~ .sheet-arms, .sheet-options_toggle[value='augs'] ~ .sheet-augs, .sheet-options_toggle[value='core'] ~ .sheet-core, .sheet-options_toggle[value='gear'] ~ .sheet-gear, .sheet-options_toggle[value='options'] ~ .sheet-options, .sheet-options_toggle[value='social'] ~ .sheet-social, .sheet-options_toggle[value='magic'] ~ .sheet-magic, .sheet-options_toggle[value='matrix'] ~ .sheet-matrix, .sheet-options_toggle[value='vehicle'] ~ .sheet-vehicle, input[name='attr_stats_toggle'][value='settings'] ~ .sheet-attribute .sheet-settings,
-input[name='attr_stats_toggle'][value='settings'] ~ .sheet-body .sheet-settings, .sheet-character-type[value='magic'] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-magic, input[name='attr_flag_special'][value='magic'] ~ .sheet-npc .sheet-hide-magic, .sheet-character-type[value='resonance'] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-resonance, input[name='attr_flag_special'][value='resonance'] ~ .sheet-npc .sheet-hide-resonance, input[name='attr_sheet_type'][value='grunt'] ~ .sheet-npc .sheet-rows.sheet-grunt,
+input[name='attr_stats_toggle'][value='settings'] ~ .sheet-body .sheet-column .sheet-settings,
+input[name='attr_stats_toggle'][value='settings'] ~ .sheet-body .sheet-textrow .sheet-settings, .sheet-character-type[value='magic'] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-magic, input[name='attr_flag_special'][value='magic'] ~ .sheet-npc .sheet-hide-magic, .sheet-character-type[value='resonance'] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-resonance, input[name='attr_flag_special'][value='resonance'] ~ .sheet-npc .sheet-hide-resonance, input[name='attr_sheet_type'][value='grunt'] ~ .sheet-npc .sheet-rows.sheet-grunt,
 input[name='attr_sheet_type'][value='grunt'] ~ .sheet-npc .sheet-textrow.sheet-grunt, input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-rows.sheet-host,
 input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-textrow.sheet-host, input[name='attr_sheet_type'][value='sprite'] ~ .sheet-npc .sheet-rows.sheet-sprite,
 input[name='attr_sheet_type'][value='sprite'] ~ .sheet-npc .sheet-textrow.sheet-sprite, input[name='attr_sheet_type'][value='vehicle'] ~ .sheet-npc .sheet-rows.sheet-vehicle,
@@ -1842,27 +1907,9 @@ input.sheet-settings-toggle[value='display'] ~ div.sheet-pc div.sheet-display,
 input.sheet-settings-toggle[value='settings'] ~ div.sheet-pc div.sheet-settings {
   display: inline-block; }
 
-/* SHOW AND HIDE MAGIC AND RESONANCE SPECIFIC ATTRIBUTES BASED ON RADIO TOGGLE */
-input[name='attr_flag_special'][value='mundane'] ~ div.sheet-npc .sheet-hide-magic,
-input[name='attr_flag_special'][value='mundane'] ~ div.sheet-npc .sheet-hide-resonance,
-input[name='attr_flag_special'][value='resonance'] ~ div.sheet-npc .sheet-hide-magic,
-input[name='attr_flag_special'][value='magic'] ~ div.sheet-npc .sheet-hide-resonance,
-input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-attribute .sheet-settings.sheet-hide-magic,
-input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-attribute .sheet-settings.sheet-hide-resonance,
-input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-body .sheet-settings.sheet-hide-magic,
-input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-body .sheet-settings.sheet-hide-resonance {
-  display: none; }
-
 /***** NPC TYPES *****/
-input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-column:nth-of-type(1n+2),
-input[name='attr_sheet_type'][value='sprite'] ~ .sheet-npc .sheet-column:nth-of-type(1n+2) {
-  display: none; }
-
-input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-body .sheet-textrow input[type='hidden'][value=''] + h2,
-input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-body .sheet-textrow input[type='hidden'][value=''] + h2 + label + span,
-input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-body .sheet-textrow input[type='hidden'][value=''] + h2 + span[name='attr_initiate'],
-input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-body .sheet-textrow input[type='hidden'][value=''] + h2 + span[name='attr_submersion'],
-input[name='attr_stats_toggle']:not([value='settings']) ~ .sheet-body .sheet-textrow input[type='hidden'][value=''] + h2 + span + label + label + span {
+/* SHOW AND HIDE MAGIC AND RESONANCE SPECIFIC ATTRIBUTES BASED ON RADIO TOGGLE */
+input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-body div.sheet-grunt.sheet-pain-tolerance {
   display: none; }
 
 .sheet-pc .sheet-tabs input[value*='arms'] ~ button[name*='arms'], .sheet-pc .sheet-tabs input[value*='augs'] ~ button[name*='augs'], .sheet-pc .sheet-tabs input[value*='core'] ~ button[name*='core'], .sheet-pc .sheet-tabs input[value*='gear'] ~ button[name*='gear'], .sheet-pc .sheet-tabs input[value*='options'] ~ button[name*='options'], .sheet-pc .sheet-tabs input[value*='social'] ~ button[name*='social'], .sheet-pc .sheet-tabs input[value*='magic'] ~ button[name*='magic'], .sheet-pc .sheet-tabs input[value*='matrix'] ~ button[name*='matrix'], .sheet-pc .sheet-tabs input[value*='vehicle'] ~ button[name*='vehicle'] {
