--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -228,8 +228,6 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 
 	h3 { font-size: 0.85em; }
 
-	input[type='number'] { width: 3em; }
-
 	input[type='radio'] { opacity: 1; }
 
 	textarea, select, .sheet-matrix input {
@@ -281,7 +279,10 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 		padding: 1%;
 		width        : 100%;
 
-		input[type='number'] {text-align: center;}
+		input[type='number'] {
+			text-align: center;
+			width: 100%;
+		}
 
 		label {
 			text-align: center;
@@ -336,16 +337,14 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 				display: inline;
 				font-size: 1.1em;
 				line-height: unset;
-				font-weight: normal;
+				font-weight: normal; 
 			}
 
-			h3 {
-				display: inline;
-			}
+			h3 { display: inline; }
 
-			span.sheet-tiny-span {
-				margin: 0px 1%;
-			}
+			input[type='number'] { width: 3em; }
+
+			span.sheet-tiny-span { margin: 0px 1%; }
 		}
 
 		span[name='attr_physical_limit']:after,
@@ -357,7 +356,11 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 		.sheet-textrow { 
 			grid-column: 1 / 4; 
 			
-			h2 {display: inline;}
+			h1 {
+				display: inline;
+				line-height: unset;
+				margin-right: 1%;
+			}
 
 			label { 
 				width: 100%;
@@ -366,12 +369,81 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 				&[data-i18n-title='submersion'] {
 					width: 4em;
 
-					& input {
-						width: 100%;
-					}
+					& input { width: 100%; }
 				}
 			}
-			
+		}
+
+		/*:+:+:+: SKILLS :+:+:+:*/
+		div.sheet-skills {
+			grid-column: 1 / 4;
+
+			h1 {display: inline;}
+			h2 {
+				font-variant: small-caps;
+				text-align  : center;
+				text-decoration: underline; 
+			}
+
+			input[type='number'] { width: 100%; }
+
+			input[name='attr_flag'] { 
+				position: absolute;
+				opacity: 0;
+				z-index: 2;
+
+				& + span { opacity: 0; }
+				&:checked + span {
+					color: $gold;
+					opacity: 1; 
+				}
+
+				&:checked ~ .sheet-settings {
+					display: inline-grid;
+					margin-bottom: 2%;
+				}
+			}
+
+    		 /*:+:+:+: NPC INLINE REPEAITNG SECTIONS SUCH AS SKILLS :+:+:+:*/
+			div.repitem {
+				&:hover > input[name='attr_flag'] + span { opacity: 1; }
+
+				div.sheet-settings {
+					min-width: 700px;
+					grid-template-columns: 2fr 8em 8em 1fr 1fr;
+					grid-column-gap: 1%;
+
+					h2[data-i18n='specializations'] {
+						grid-column: 1 / 6;
+						text-align: left;
+					}
+
+					label[data-i18n-title="specializations"] {
+						grid-column: 1 / 6;
+
+						input[type='text']{ 
+							text-align: left;
+							width: 100%;
+						}
+					}
+				}
+
+				span[name='attr_display_rating']:after {
+					content: ',';
+				}
+			}
+
+			div.repcontainer {
+				display: inline;
+				max-width: 500px;
+
+				.repitem,
+				.repcontrol {
+					display       : inline-block;
+					vertical-align: top;
+					margin-bottom : 0px;
+				}
+			}
 		}
 	}
 
